# preloop

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  FEATURES.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TESTING.md  VERSION  cliff.toml  docker-compose.override.yml  docker-compose.release.yaml  docker-compose.yml  init_test_data.py  mkdocs.yml  openapi.yaml  plans.yaml  pyproject.toml  start.sh  test_mcp_client.py  test_pre_commit.py
backend/preloop-sync/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
backend/preloop-sync/preloop_sync/: __main__.py  config.py  exceptions.py  tasks.py  utils.py
backend/preloop-sync/preloop_sync/cli/: __init__.py  commands.py  monitor_commands.py  scan_commands.py  scheduler_commands.py  service_commands.py  worker_commands.py
backend/preloop-sync/preloop_sync/scanner/: __init__.py  core.py
backend/preloop-sync/preloop_sync/services/: __init__.py  base.py  event_bus.py  manager.py  nats_worker.py
backend/preloop-sync/preloop_sync/trackers/: __init__.py  base.py  github.py  gitlab.py  jira.py
backend/preloop-sync/spacesync/: config.py  exceptions.py
backend/preloop-sync/spacesync/cli/: __init__.py  commands.py  monitor_commands.py  worker_commands.py
backend/preloop-sync/spacesync/scanner/: __init__.py  core.py
backend/preloop-sync/spacesync/services/: __init__.py  event_bus.py  nats_worker.py
backend/preloop-sync/spacesync/trackers/: __init__.py  base.py
backend/preloop-sync/tests/: test_cli.py  test_config.py  test_event_normalizer.py
backend/preloop-sync/tests/api/: test_tracker_integration.py
backend/preloop-sync/tests/scanner/: test_core.py  test_regression.py
backend/preloop-sync/tests/services/: test_base.py  test_event_bus.py  test_manager.py
backend/preloop-sync/tests/trackers/: test_base_tracker.py  test_github.py  test_github_crud.py  test_gitlab.py  test_gitlab_crud.py  test_gitlab_new_methods.py  test_jira.py  test_jira_new_methods.py  test_utils.py
lib/preloop-models/: .coverage  .gitignore  .gitlab-ci.yml  MIGRATION_README.md  README.md  ROADMAP.md  SUMMARY.md  add_embedding_model.py  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_migration.py  run_tests.sh  setup.py  test_timestamps.py
lib/preloop-models/alembic/: env.py
lib/preloop-models/alembic/new/: 4a3fe57fc6ba_add_model_configurations_table.py  5fd31a7ef8f2_add_flow_executions_table.py
lib/preloop-models/alembic/versions/: 017231752fde_add_subscribed_events_to_tracker.py  01f0de57ea4b_add_issue_compliance_result.py  0391d4c0e7e1_add_issue_duplicate_table.py  06f1829bdac9_add_mcp_server_and_mcp_tool_tables.py  0960346a65e0_add_llm_model_and_duplicate_table.py  0be6b535384a_add_tool_configuration_and_approval_.py  0d60985a5fed_multi_user_architecture_phase0a.py  18406d4f0aaa_add_llm_provider_table.py  196418f4da7e_add_approval_request_table.py  20250612135000_delete_placeholder_organizations.py  20250617145000_refactor_tracker_scoping.py  20251105_initial_schema.py  20251111_add_metadata_to_api_key.py  20251111_increase_issue_description_limit_to_text.py  3129596c8d4f_add_issue_resolution.py  3469ff2b292c_add_tool_configuration_table.py  478fc3894fb0_add_approval_token_to_approval_request.py  4bbe86aa820f_comment_refactor.py  4e94694b4381_add_webhook_last_verified_at_to_project.py  52502e04d6ef_create_flow_table.py  54dea8a96182_create_comment_table.py  59d885f87415_create_approval_request_table.py  5afff993cf6a_add_timestamps_to_approval_request.py  5ce658ffa0e3_add_audit_log_table_for_security_.py  5ddda083abc0_add_is_default_to_approval_policy.py  5fd31a7ef8f2_add_flow_executions_table.py  6554a19f6811_merge_webhook_and_tracker_scoping_.py  6b2f38e54904_unify_llmmodel_and_modelconfiguration_.py  6d34c809cd72_add_git_clone_config_and_custom_.py  78081c979725_add_slug_column_to_project_table.py  7a8b9c0d1e2f_update_tool_configuration_add_approval_policy.py  7cb89dbca31a_create_comment_table.py  8142720340e0_add_org_and_project_identifiers_to_.py  87a6b8fd3e65_autogenerated_migration.py  8e9f1a2b3c4d_make_approval_policies_reusable.py  8f4003dc40a7_add_flow_organization_and_project_.py  97d779394715_rename_openhands_fields_to_agent_fields.py  98b2c8291a52_add_suggestion_to_issue_compliance_.py  9f557696858b_merge_approval_policy_branches.py  a5bd730968f3_add_key_field_to_issue_model.py  (+18 more)
lib/preloop-models/docs/: usage_examples.md
lib/preloop-models/scripts/: add_embedding_model.py  create_tables.py  drop_tables.py  migrate_to_multi_user.py  verify_all_emails.py
lib/preloop-models/spacemodels/: __init__.py  sentry.py
lib/preloop-models/spacemodels/crud/: __init__.py  account.py  ai_model.py  api_key.py  api_usage.py  approval_policy.py  approval_request.py  base.py  comment.py  embedding.py  flow.py  flow_execution.py  issue.py  issue_compliance_result.py  issue_duplicate.py  issue_relationship.py  issue_set.py  llm_model.py  llm_provider.py  mcp_server.py  model_configuration.py  organization.py  project.py  tool_configuration.py  tracker.py  tracker_scope_rule.py  webhook.py
lib/preloop-models/spacemodels/db/: __init__.py  session.py  setup.py  vector_types.py
lib/preloop-models/spacemodels/models/: __init__.py  account.py  ai_model.py  api_key.py  api_usage.py  approval_request.py  approval_rule.py  base.py  (+28 more)
lib/preloop-models/tests/: conftest.py  test_account.py  test_account_model.py  test_ai_model.py  test_api_key.py  test_api_usage.py  test_api_usage_edge_cases.py  test_approval_request_schema.py  test_crud_lookup.py  test_db_session.py  test_db_setup.py  test_embedding.py  test_flow.py  test_issue_relationship.py  test_issue_set.py  test_llm_model.py  test_llm_provider.py  test_mcp_server_schema.py  test_organization_ownership.py  test_plan_schema.py  test_timestamps.py  test_vector_types.py
runtime-plugins/hermes-preloop/: README.md  preloop-plugin.json  pyproject.toml
(+2325 files in other folders)
