[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacebridge"
version = "0.1.0"
description = "REST API server for issue tracker management"
authors = [{name = "Dimitris Moraitis", email = "dimitris@spacecode.ai"}, {name = "Yannis Chatzikonstantinou", email = "yannis@spacecode.ai"}]
requires-python = ">=3.10"
dependencies = [
    "uvicorn>=0.23.0",
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "psycopg>=3.1.12",
    "pgvector>=0.2.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.4.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.24.1",
    "tenacity>=8.2.3",
    "python-json-logger>=2.0.0",
    "jinja2>=3.1.2",
    "aiosmtplib>=2.0.2",
    "loguru>=0.7.3",
    # Using SpaceModels for database models and operations
    # "spacemodels @ file://${PROJECT_ROOT}/SpaceModels",
    # "spacesync @ file://${PROJECT_ROOT}/spacesync",
]

[tool.setuptools]
packages = ["spacebridge"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.287",
    # Docs dependencies
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.3",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

# Linting options
[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W"]
ignore = ["B008", "E501", "F841", "E741", "B904", "N805", "F821"]  # Ignore problematic rules for now
extend-ignore = ["I001"]

# Format configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
