[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacebridge"
version = "0.3.0"
description = "REST API server for issue tracker management"
authors = [{name = "Dimitris Moraitis", email = "dimitris@spacecode.ai"}, {name = "Yannis Chatzikonstantinou", email = "yannis@spacecode.ai"}]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.72.0",
    "uvicorn[standard]>=0.36.0",
    "fastapi>=0.115.13",
    "sqlalchemy>=2.0.0",
    "psycopg>=3.1.12",
    "pgvector>=0.2.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.4.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.1",
    "tenacity>=8.2.3",
    "python-json-logger>=2.0.0",
    "jinja2>=3.1.2",
    "aiosmtplib>=2.0.2",
    "loguru>=0.7.3",
    "aiohttp>=3.9.0", # Added for Jira client
    "sentry-sdk[fastapi]>=2.9.0",
    "pyinstrument>=4.6.2",
    "nats-py>=2.6.0", # Added for NATS integration
    "stripe>=12.4.0",
    "fastmcp>=2.13.0",  # Version 2.13.0+ required for context parameter in _list_tools
    "aiodocker>=0.21.0", # Added for agent container execution
    "kubernetes_asyncio>=30.5.0", # Added for Kubernetes agent execution
    "cel-python>=0.1.0", # Added for CEL expression evaluation in approval rules
    # Using SpaceModels for database models and operations
    # "spacemodels @ file://${PROJECT_ROOT}/SpaceModels",
    # "spacesync @ file://${PROJECT_ROOT}/spacesync",
]

[tool.setuptools]
packages = ["spacebridge"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "python-dotenv>=0.21.0", # Added python-dotenv
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.287",
    # Docs dependencies
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.3",
    "httpx>=0.24.1",
    "playwright>=1.30.0",
    "mcp>=1.0.0",  # MCP client for integration tests
]
ai-providers = [
    "anthropic>=0.39.0",  # For Anthropic Claude API key validation
    "google-generativeai>=0.8.0",  # For Google Gemini API key validation
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

# Linting options
[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W"]
ignore = ["B008", "E501", "F841", "E741", "B904", "N805", "F821"]  # Ignore problematic rules for now
extend-ignore = ["I001"]

# Format configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "SpaceModels/tests",
    "spacesync/tests",
]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests that require external services",
    "mcp: tests that use Claude MCP tools",
    "github: GitHub-specific tests",
    "gitlab: GitLab-specific tests",
    "jira: Jira-specific tests",
]

[tool.coverage.run]
source = [
    "spacebridge",
    "SpaceModels/spacemodels",
    "spacesync/spacesync",
]

omit = [
    "tests/*",
    "*/tests/*",
]
