[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "preloop-sync"
version = "0.1.0"
authors = [
  {name = "Dimitris Moraitis", email = "dimitris@spacecode.ai"},
  {name = "Yannis Chatzikonstantinou", email = "yannis@spacecode.ai"},
]
description = "Preloop Sync service"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    # Assuming spacemodels is installed separately
    "python-gitlab",
    "flask>=2.0.0",
    "APScheduler>=3.0.0",
    "pytz>=2025.2",
    "jira>=3.8.0",
    "nats-py>=2.6.0", # Added for NATS integration
    "tenacity>=8.2.3",
]

[project.scripts]
preloop-sync = "preloop_sync.cli.commands:run"

[project.urls]
"Homepage" = "https://preloop.ai"
"Bug Tracker" = "https://github.com/spacecode-ai/preloop-ai/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.coverage.run]
omit = [
    "tests/*",
    "*/migrations/*"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["preloop_sync"]
exclude = ["preloop_sync.tests*"]
namespaces = false