[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacemodels"
version = "0.1.0"
authors = [
  {name = "Dimitris Moraitis", email = "dimo@spacecode.ai"},
  {name = "Yannis Chatzikonstantinou", email = "yannis@spacecode.ai"},
]
description = "SQLAlchemy ORM models for SpaceBridge ecosystem"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg>=3.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.6.0",
    "passlib>=1.7.4",
    "uuid>=0.0.1",
    "openai>=1.75.0",
    "psycopg2-binary>=2.9.6",
    "pgvector>=0.4.0",
    "alembic>=1.10.0",
    "numpy>=1.24.0",
    "ruff>=0.11.0",
    "pre-commit>=4.1.0",
    "openai>=1.75.0",
    "pytest-mock>=3.10.0",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=6.1.0",
    "pytest-asyncio>=0.26.0",
]


[project.urls]
"Homepage" = "https://gitlab.spacecode.ai/spacecode/spacemodels"
"Bug Tracker" = "https://gitlab.spacecode.ai/spacecode/spacemodels/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py39']
